# simple-redis

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: array_list.c  array_list.h  linked_list.c  linked_list.h  sds.c  sds.h
test/: CMakeLists.txt  linked_list_test.cpp  sds_test.cpp
